# react-native-image-decoder

./: README.md  package.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/reactnativeimagedecoder/: ImageDecoderModule.java  ImageDecoderPackage.java
src/: index.ts
